configs/minio-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: minio
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "minio.pinjyun.local"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: minio
spec:
  hosts:
  - "minio.pinjyun.local"
  gateways:
  - minio
  http:
  - route:
    - destination:
        port:
          number: 9000
        host: minio.minio.svc.cluster.local
